@@ -11,6 +11,7 @@
      Write-Ahead Logging mode which may provide some disk i/o benefits,
      see https://www.sqlite.org/wal.html for more details and note that
      SQLite 3.22.0 or later is required to support read-only operations
+   - Show warning in log if writing cached data to database is slow
 
 
 2.2 / 28-Apr-2018
